Able to record strokes; set up TreeView to reflect strokes; set different colors

--- a/Tegami/StrokeImage/My Project/Resources.resx
+++ b/Tegami/StrokeImage/My Project/Resources.resx
@@ -121,4 +121,7 @@
   <data name="royce face" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\royce face.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="super waki" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\super waki.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
